[package]
name = "async-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [
    "net",
    "io-util",
    "io-std",
    "macros",
    "rt-multi-thread",
    "process",
] }
tokio-util = { version = "0.6", features = ["codec"] }
lsp-types = "0.91"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
ws-tool = { version = "0.3" }
tracing = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
